# portfolio

./: README.md
1 курс/Введение в профессиональную деятельность/server/: .gitignore  .gitlab-ci.yml  Dockerfile  pytest.ini  requirements.txt
3 семестр/Алгоритмы и структуры данных/: Бинарный_поиск_и_мода.py  Граф_поиск_в_глубину.py  Дейкстра.py  Кнут-Моррис-Пратт.py  Краскал.py  Сортировка_(быстрая_шейкерная).py  Сортировка_(прямой_выбор_пузырек).py  Сортировка_слиянием.py
3 семестр/Теория вероятностей/: laba1.r  laba2.r  laba3.r
4 семестр/Алгоритмы и структуры данных/: Джонсон.py  Хэш-таблица.py
4 семестр/Алгоритмы и структуры данных/Двоичное_дерево/: binarytree.py
4 семестр/Алгоритмы и структуры данных/Муравьиный_алгоритм_(коммивояжер)/: laba1.py
4 семестр/Анализ данных/: variant_15.csv  Лаба1.ipynb  Лаба2.ipynb  Лаба3.ipynb  Лаба4.ipynb  Лаба5.ipynb
4 семестр/Веб программирование/Лаба1/: favourites.html  (+6 more)
4 семестр/Системное программирование/lab6/: client.c  config.h  config.h.in  config.status  configure.ac  configure.scan  log.c  log.h  server.c  signals.c  signals.h  socketOperations.c
5 семестр/Методы оптимизации/: Генетика.ipynb
6 семестр/Андроид-разработка/: ~$Лаба1.docx  Лаба1.docx  Лаба2.docx  Лаба3.docx  Лаба4.docx
Практика1/src/: app.js  files.txt  links.txt  users.txt
Практика2/: Finetune_RuGPTs_with_HF.ipynb  database.py  db_to_txt.py  html_parser.py  wiki_parser.py  ~$Лаба8.docx
Практика3/: manage.py  requirements.txt  Отчет о практике.docx  План.docx
Практика3/server/: const.py  image.py  main.py
Практика3/templates/: home.html
(+413 files in other folders)
